// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse() can parse '   some random test   ' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "   some random test   ",
  },
]
`;

exports[`parse() can parse '''{name}''' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "'",
  },
  Object {
    "type": 1,
    "value": "name",
  },
  Object {
    "type": 0,
    "value": "'",
  },
]
`;

exports[`parse() can parse '''{name}''' 2`] = `
Array [
  Object {
    "type": 0,
    "value": "'",
  },
  Object {
    "type": 1,
    "value": "name",
  },
  Object {
    "type": 0,
    "value": "'",
  },
]
`;

exports[`parse() can parse '\\#' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "\\\\#",
  },
]
`;

exports[`parse() can parse '\\{' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "{",
  },
]
`;

exports[`parse() can parse '\\}' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "}",
  },
]
`;

exports[`parse() can parse '\\u003C' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "<",
  },
]
`;

exports[`parse() can parse '{  num , number,percent  }' 1`] = `
Array [
  Object {
    "style": "percent",
    "type": 2,
    "value": "num",
  },
]
`;

exports[`parse() can parse '{c, plural, =1 { {text} project} other { {text} projects}}' 1`] = `
Array [
  Object {
    "offset": 0,
    "options": Object {
      "=1": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": " ",
          },
          Object {
            "type": 1,
            "value": "text",
          },
          Object {
            "type": 0,
            "value": " project",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": " ",
          },
          Object {
            "type": 1,
            "value": "text",
          },
          Object {
            "type": 0,
            "value": " projects",
          },
        ],
      },
    },
    "pluralType": "cardinal",
    "type": 6,
    "value": "c",
  },
]
`;

exports[`parse() can parse '{count, time}' 1`] = `
Array [
  Object {
    "style": null,
    "type": 4,
    "value": "count",
  },
]
`;

exports[`parse() can parse '{floor, selectordinal, =0{ground} one{#st} two{#nd} few{#rd} other{#th}} floor' 1`] = `
Array [
  Object {
    "offset": 0,
    "options": Object {
      "=0": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "ground",
          },
        ],
      },
      "few": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "floor",
          },
          Object {
            "type": 0,
            "value": "rd",
          },
        ],
      },
      "one": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "floor",
          },
          Object {
            "type": 0,
            "value": "st",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "floor",
          },
          Object {
            "type": 0,
            "value": "th",
          },
        ],
      },
      "two": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "floor",
          },
          Object {
            "type": 0,
            "value": "nd",
          },
        ],
      },
    },
    "pluralType": "ordinal",
    "type": 6,
    "value": "floor",
  },
  Object {
    "type": 0,
    "value": " floor",
  },
]
`;

exports[`parse() can parse '{gender, select, female {woman} male {man} other {person}}' 1`] = `
Array [
  Object {
    "options": Object {
      "female": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "woman",
          },
        ],
      },
      "male": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "man",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "person",
          },
        ],
      },
    },
    "type": 5,
    "value": "gender",
  },
]
`;

exports[`parse() can parse '{num, number, percent}' 1`] = `
Array [
  Object {
    "style": "percent",
    "type": 2,
    "value": "num",
  },
]
`;

exports[`parse() can parse '{numPhotos, plural, =0{no photos} =1{one photo} other{# photos}}' 1`] = `
Array [
  Object {
    "offset": 0,
    "options": Object {
      "=0": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "no photos",
          },
        ],
      },
      "=1": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "one photo",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "numPhotos",
          },
          Object {
            "type": 0,
            "value": " photos",
          },
        ],
      },
    },
    "pluralType": "cardinal",
    "type": 6,
    "value": "numPhotos",
  },
]
`;

exports[`parse() can parse 'Foo {var1, plural, =0{# var1} other{{var2, plural, =0{# var2} other{# var2-other}} # other}}' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "Foo ",
  },
  Object {
    "offset": 0,
    "options": Object {
      "=0": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "var1",
          },
          Object {
            "type": 0,
            "value": " var1",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "offset": 0,
            "options": Object {
              "=0": Object {
                "location": undefined,
                "value": Array [
                  Object {
                    "style": null,
                    "type": 2,
                    "value": "var2",
                  },
                  Object {
                    "type": 0,
                    "value": " var2",
                  },
                ],
              },
              "other": Object {
                "location": undefined,
                "value": Array [
                  Object {
                    "style": null,
                    "type": 2,
                    "value": "var2",
                  },
                  Object {
                    "type": 0,
                    "value": " var2-other",
                  },
                ],
              },
            },
            "pluralType": "cardinal",
            "type": 6,
            "value": "var2",
          },
          Object {
            "type": 0,
            "value": " ",
          },
          Object {
            "style": null,
            "type": 2,
            "value": "var1",
          },
          Object {
            "type": 0,
            "value": " other",
          },
        ],
      },
    },
    "pluralType": "cardinal",
    "type": 6,
    "value": "var1",
  },
]
`;

exports[`parse() can parse 'Hello, {name}!' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "Hello, ",
  },
  Object {
    "type": 1,
    "value": "name",
  },
  Object {
    "type": 0,
    "value": "!",
  },
]
`;

exports[`parse() can parse 'Hello, World!' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "Hello, World!",
  },
]
`;

exports[`parse() can parse 'My name is {FIRST} {LAST}, age {age, number}, time {time, time}, date {date, date}.' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "My name is ",
  },
  Object {
    "type": 1,
    "value": "FIRST",
  },
  Object {
    "type": 0,
    "value": " ",
  },
  Object {
    "type": 1,
    "value": "LAST",
  },
  Object {
    "type": 0,
    "value": ", age ",
  },
  Object {
    "style": null,
    "type": 2,
    "value": "age",
  },
  Object {
    "type": 0,
    "value": ", time ",
  },
  Object {
    "style": null,
    "type": 4,
    "value": "time",
  },
  Object {
    "type": 0,
    "value": ", date ",
  },
  Object {
    "style": null,
    "type": 3,
    "value": "date",
  },
  Object {
    "type": 0,
    "value": ".",
  },
]
`;

exports[`parse() can parse 'This '{isn''t}' obvious' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "This '",
  },
  Object {
    "type": 1,
    "value": "isn't",
  },
  Object {
    "type": 0,
    "value": "' obvious",
  },
]
`;

exports[`parse() can parse 'this is {count,plural,offset:1 one{{count, number} dog} other{{count, number} dogs}}' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "this is ",
  },
  Object {
    "offset": 1,
    "options": Object {
      "one": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "count",
          },
          Object {
            "type": 0,
            "value": " dog",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "count",
          },
          Object {
            "type": 0,
            "value": " dogs",
          },
        ],
      },
    },
    "pluralType": "cardinal",
    "type": 6,
    "value": "count",
  },
]
`;

exports[`parse() can print AST from '   some random test   ' 1`] = `"   some random test   "`;

exports[`parse() can print AST from '''{name}''' 1`] = `"'{name}'"`;

exports[`parse() can print AST from '''{name}''' 2`] = `"'{name}'"`;

exports[`parse() can print AST from '\\#' 1`] = `"\\\\#"`;

exports[`parse() can print AST from '\\{' 1`] = `"\\\\{"`;

exports[`parse() can print AST from '\\}' 1`] = `"\\\\}"`;

exports[`parse() can print AST from '\\u003C' 1`] = `"<"`;

exports[`parse() can print AST from '{  num , number,percent  }' 1`] = `"{num, number, percent}"`;

exports[`parse() can print AST from '{c, plural, =1 { {text} project} other { {text} projects}}' 1`] = `"{c,plural,=1{ {text} project} other{ {text} projects}}"`;

exports[`parse() can print AST from '{count, time}' 1`] = `"{count, time}"`;

exports[`parse() can print AST from '{floor, selectordinal, =0{ground} one{#st} two{#nd} few{#rd} other{#th}} floor' 1`] = `"{floor,selectordinal,=0{ground} one{{floor, number}st} two{{floor, number}nd} few{{floor, number}rd} other{{floor, number}th}} floor"`;

exports[`parse() can print AST from '{gender, select, female {woman} male {man} other {person}}' 1`] = `"{gender,select,female{woman} male{man} other{person}}"`;

exports[`parse() can print AST from '{num, number, percent}' 1`] = `"{num, number, percent}"`;

exports[`parse() can print AST from '{numPhotos, plural, =0{no photos} =1{one photo} other{# photos}}' 1`] = `"{numPhotos,plural,=0{no photos} =1{one photo} other{{numPhotos, number} photos}}"`;

exports[`parse() can print AST from 'Foo {var1, plural, =0{# var1} other{{var2, plural, =0{# var2} other{# var2-other}} # other}}' 1`] = `"Foo {var1,plural,=0{{var1, number} var1} other{{var2,plural,=0{{var2, number} var2} other{{var2, number} var2-other}} {var1, number} other}}"`;

exports[`parse() can print AST from 'Hello, {name}!' 1`] = `"Hello, {name}!"`;

exports[`parse() can print AST from 'Hello, World!' 1`] = `"Hello, World!"`;

exports[`parse() can print AST from 'My name is {FIRST} {LAST}, age {age, number}, time {time, time}, date {date, date}.' 1`] = `"My name is {FIRST} {LAST}, age {age, number}, time {time, time}, date {date, date}."`;

exports[`parse() can print AST from 'This '{isn''t}' obvious' 1`] = `"This '{isn't}' obvious"`;

exports[`parse() can print AST from 'this is {count,plural,offset:1 one{{count, number} dog} other{{count, number} dogs}}' 1`] = `"this is {count,plural,offset:1 one{{count, number} dog} other{{count, number} dogs}}"`;

exports[`parse({ captureLocation: true }) can parse '   some random test   ' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "   some random test   ",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '''{name}''' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "'",
  },
  Object {
    "type": 1,
    "value": "name",
  },
  Object {
    "type": 0,
    "value": "'",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '''{name}''' 2`] = `
Array [
  Object {
    "type": 0,
    "value": "'",
  },
  Object {
    "type": 1,
    "value": "name",
  },
  Object {
    "type": 0,
    "value": "'",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '\\#' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "\\\\#",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '\\{' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "{",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '\\}' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "}",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '\\u003C' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "<",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '{  num , number,percent  }' 1`] = `
Array [
  Object {
    "style": "percent",
    "type": 2,
    "value": "num",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '{c, plural, =1 { {text} project} other { {text} projects}}' 1`] = `
Array [
  Object {
    "offset": 0,
    "options": Object {
      "=1": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": " ",
          },
          Object {
            "type": 1,
            "value": "text",
          },
          Object {
            "type": 0,
            "value": " project",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": " ",
          },
          Object {
            "type": 1,
            "value": "text",
          },
          Object {
            "type": 0,
            "value": " projects",
          },
        ],
      },
    },
    "pluralType": "cardinal",
    "type": 6,
    "value": "c",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '{count, time}' 1`] = `
Array [
  Object {
    "style": null,
    "type": 4,
    "value": "count",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '{floor, selectordinal, =0{ground} one{#st} two{#nd} few{#rd} other{#th}} floor' 1`] = `
Array [
  Object {
    "offset": 0,
    "options": Object {
      "=0": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "ground",
          },
        ],
      },
      "few": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "floor",
          },
          Object {
            "type": 0,
            "value": "rd",
          },
        ],
      },
      "one": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "floor",
          },
          Object {
            "type": 0,
            "value": "st",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "floor",
          },
          Object {
            "type": 0,
            "value": "th",
          },
        ],
      },
      "two": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "floor",
          },
          Object {
            "type": 0,
            "value": "nd",
          },
        ],
      },
    },
    "pluralType": "ordinal",
    "type": 6,
    "value": "floor",
  },
  Object {
    "type": 0,
    "value": " floor",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '{gender, select, female {woman} male {man} other {person}}' 1`] = `
Array [
  Object {
    "options": Object {
      "female": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "woman",
          },
        ],
      },
      "male": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "man",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "person",
          },
        ],
      },
    },
    "type": 5,
    "value": "gender",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '{num, number, percent}' 1`] = `
Array [
  Object {
    "style": "percent",
    "type": 2,
    "value": "num",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse '{numPhotos, plural, =0{no photos} =1{one photo} other{# photos}}' 1`] = `
Array [
  Object {
    "offset": 0,
    "options": Object {
      "=0": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "no photos",
          },
        ],
      },
      "=1": Object {
        "location": undefined,
        "value": Array [
          Object {
            "type": 0,
            "value": "one photo",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "numPhotos",
          },
          Object {
            "type": 0,
            "value": " photos",
          },
        ],
      },
    },
    "pluralType": "cardinal",
    "type": 6,
    "value": "numPhotos",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse 'Foo {var1, plural, =0{# var1} other{{var2, plural, =0{# var2} other{# var2-other}} # other}}' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "Foo ",
  },
  Object {
    "offset": 0,
    "options": Object {
      "=0": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "var1",
          },
          Object {
            "type": 0,
            "value": " var1",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "offset": 0,
            "options": Object {
              "=0": Object {
                "location": undefined,
                "value": Array [
                  Object {
                    "style": null,
                    "type": 2,
                    "value": "var2",
                  },
                  Object {
                    "type": 0,
                    "value": " var2",
                  },
                ],
              },
              "other": Object {
                "location": undefined,
                "value": Array [
                  Object {
                    "style": null,
                    "type": 2,
                    "value": "var2",
                  },
                  Object {
                    "type": 0,
                    "value": " var2-other",
                  },
                ],
              },
            },
            "pluralType": "cardinal",
            "type": 6,
            "value": "var2",
          },
          Object {
            "type": 0,
            "value": " ",
          },
          Object {
            "style": null,
            "type": 2,
            "value": "var1",
          },
          Object {
            "type": 0,
            "value": " other",
          },
        ],
      },
    },
    "pluralType": "cardinal",
    "type": 6,
    "value": "var1",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse 'Hello, {name}!' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "Hello, ",
  },
  Object {
    "type": 1,
    "value": "name",
  },
  Object {
    "type": 0,
    "value": "!",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse 'Hello, World!' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "Hello, World!",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse 'My name is {FIRST} {LAST}, age {age, number}, time {time, time}, date {date, date}.' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "My name is ",
  },
  Object {
    "type": 1,
    "value": "FIRST",
  },
  Object {
    "type": 0,
    "value": " ",
  },
  Object {
    "type": 1,
    "value": "LAST",
  },
  Object {
    "type": 0,
    "value": ", age ",
  },
  Object {
    "style": null,
    "type": 2,
    "value": "age",
  },
  Object {
    "type": 0,
    "value": ", time ",
  },
  Object {
    "style": null,
    "type": 4,
    "value": "time",
  },
  Object {
    "type": 0,
    "value": ", date ",
  },
  Object {
    "style": null,
    "type": 3,
    "value": "date",
  },
  Object {
    "type": 0,
    "value": ".",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse 'This '{isn''t}' obvious' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "This '",
  },
  Object {
    "type": 1,
    "value": "isn't",
  },
  Object {
    "type": 0,
    "value": "' obvious",
  },
]
`;

exports[`parse({ captureLocation: true }) can parse 'this is {count,plural,offset:1 one{{count, number} dog} other{{count, number} dogs}}' 1`] = `
Array [
  Object {
    "type": 0,
    "value": "this is ",
  },
  Object {
    "offset": 1,
    "options": Object {
      "one": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "count",
          },
          Object {
            "type": 0,
            "value": " dog",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "style": null,
            "type": 2,
            "value": "count",
          },
          Object {
            "type": 0,
            "value": " dogs",
          },
        ],
      },
    },
    "pluralType": "cardinal",
    "type": 6,
    "value": "count",
  },
]
`;

exports[`parse({ captureLocation: true }) can print AST from '   some random test   ' 1`] = `"   some random test   "`;

exports[`parse({ captureLocation: true }) can print AST from '''{name}''' 1`] = `"'{name}'"`;

exports[`parse({ captureLocation: true }) can print AST from '''{name}''' 2`] = `"'{name}'"`;

exports[`parse({ captureLocation: true }) can print AST from '\\#' 1`] = `"\\\\#"`;

exports[`parse({ captureLocation: true }) can print AST from '\\{' 1`] = `"\\\\{"`;

exports[`parse({ captureLocation: true }) can print AST from '\\}' 1`] = `"\\\\}"`;

exports[`parse({ captureLocation: true }) can print AST from '\\u003C' 1`] = `"<"`;

exports[`parse({ captureLocation: true }) can print AST from '{  num , number,percent  }' 1`] = `"{num, number, percent}"`;

exports[`parse({ captureLocation: true }) can print AST from '{c, plural, =1 { {text} project} other { {text} projects}}' 1`] = `"{c,plural,=1{ {text} project} other{ {text} projects}}"`;

exports[`parse({ captureLocation: true }) can print AST from '{count, time}' 1`] = `"{count, time}"`;

exports[`parse({ captureLocation: true }) can print AST from '{floor, selectordinal, =0{ground} one{#st} two{#nd} few{#rd} other{#th}} floor' 1`] = `"{floor,selectordinal,=0{ground} one{{floor, number}st} two{{floor, number}nd} few{{floor, number}rd} other{{floor, number}th}} floor"`;

exports[`parse({ captureLocation: true }) can print AST from '{gender, select, female {woman} male {man} other {person}}' 1`] = `"{gender,select,female{woman} male{man} other{person}}"`;

exports[`parse({ captureLocation: true }) can print AST from '{num, number, percent}' 1`] = `"{num, number, percent}"`;

exports[`parse({ captureLocation: true }) can print AST from '{numPhotos, plural, =0{no photos} =1{one photo} other{# photos}}' 1`] = `"{numPhotos,plural,=0{no photos} =1{one photo} other{{numPhotos, number} photos}}"`;

exports[`parse({ captureLocation: true }) can print AST from 'Foo {var1, plural, =0{# var1} other{{var2, plural, =0{# var2} other{# var2-other}} # other}}' 1`] = `"Foo {var1,plural,=0{{var1, number} var1} other{{var2,plural,=0{{var2, number} var2} other{{var2, number} var2-other}} {var1, number} other}}"`;

exports[`parse({ captureLocation: true }) can print AST from 'Hello, {name}!' 1`] = `"Hello, {name}!"`;

exports[`parse({ captureLocation: true }) can print AST from 'Hello, World!' 1`] = `"Hello, World!"`;

exports[`parse({ captureLocation: true }) can print AST from 'My name is {FIRST} {LAST}, age {age, number}, time {time, time}, date {date, date}.' 1`] = `"My name is {FIRST} {LAST}, age {age, number}, time {time, time}, date {date, date}."`;

exports[`parse({ captureLocation: true }) can print AST from 'This '{isn''t}' obvious' 1`] = `"This '{isn't}' obvious"`;

exports[`parse({ captureLocation: true }) can print AST from 'this is {count,plural,offset:1 one{{count, number} dog} other{{count, number} dogs}}' 1`] = `"this is {count,plural,offset:1 one{{count, number} dog} other{{count, number} dogs}}"`;
